# esp8266-iot-sensor-fw

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
ESP12S-measure-v1/: conn_pwr_kk.lbr  eagle.epf  esp8266-bme280-deepsleep.brd  esp8266-bme280-deepsleep.pro  esp8266-bme280-deepsleep.sch  esp8266-bme280-deepsleep_00.bga
ESP12S-measure-v2/: 74HC4051D_653.lbr  SMD-SWITCH-1.lbr  eagle.epf  esp8266-bme280-deepsleep.brd  esp8266-bme280-deepsleep.sch  template_2_layer.cam
ESP12S-measure-v3/: B3U-1000P.lbr  eagle.epf  esp8266-bme280-deepsleep.b#1  esp8266-bme280-deepsleep.b#2  esp8266-bme280-deepsleep.b#3  esp8266-bme280-deepsleep.b#4  esp8266-bme280-deepsleep.b#5  esp8266-bme280-deepsleep.b#6  esp8266-bme280-deepsleep.brd  esp8266-bme280-deepsleep.s#1  esp8266-bme280-deepsleep.s#2  esp8266-bme280-deepsleep.s#3  esp8266-bme280-deepsleep.sch
data/: custom.js  index.html  osm.html  template.html  ts.html  wifi.html
html_tests/: index.html  osm.html  wifi.html
src/: ESPTemplateProcessor.h  OpenSenseMap.cpp  OpenSenseMap.h  OpenSenseMapConfig.cpp  OpenSenseMapConfig.h  Sensor.cpp  Sensor.h  Settings.h  ThingSpeakConfig.cpp  ThingSpeakConfig.h  WebServer.cpp  WebServer.h  Wifi.cpp  Wifi.h
src/OpenSenseMap/: OpenSenseMap.cpp  OpenSenseMap.h  Sender.cpp  Sender.h
src/ThingSpeak/: ThingSpeak.cpp  ThingSpeak.h
